overflow issue solved

--- a/app/components/section3/section3.module.css
+++ b/app/components/section3/section3.module.css
@@ -32,7 +32,7 @@
 
 .flexText {
   width: 25rem;
-  height: 15rem;
+  height: auto;
   margin: 1rem 1rem;
   flex: 1 1 auto;
 }
